# ESP32_AutoHome

./: .cproject  .gitignore  .project  TTGO.csv  sdkconfig  sdkconfig.old
examples/Texts with AI and DI/main/: CMakeLists.txt  System.cpp  System.h  main.h
main/: System.cpp  System.h  main.cpp
